Blender crashes when nodes are muted #44040

Closed
opened 2015-03-19 01:38:54 +01:00 by Vincent Girès · 7 comments

System Information
Ubuntu 14.04 / GTX 760

Blender Version
Broken: 2.74 RC2
Worked: 2.73

Short description of error
Blender crashes when nodes are muted between Separete RGBA and Combine RGBA (those nodes also muted).
This is an example that makes Blender crash : http://img11.hostingpics.net/pics/497017compobug.png
Same node setup was working fine on 2.73 version.

Each nodes can be muted without problem but everything in the same time cause the issue.

Exact steps for others to reproduce the error
Open Blender, make a render, go to the compositor, create a Separete RGBA and Combine RGBA nodes, connect them and put anything between it (math, color balance). Display the result, mute those three nodes and it always crash on my computer.
http://vincentgires.com/divers/blender_bug/compo_mute_bug_2.74.blend (this is the screenshot file)

**System Information** Ubuntu 14.04 / GTX 760 **Blender Version** Broken: 2.74 RC2 Worked: 2.73 **Short description of error** Blender crashes when nodes are muted between Separete RGBA and Combine RGBA (those nodes also muted). This is an example that makes Blender crash : http://img11.hostingpics.net/pics/497017compobug.png Same node setup was working fine on 2.73 version. Each nodes can be muted without problem but everything in the same time cause the issue. **Exact steps for others to reproduce the error** Open Blender, make a render, go to the compositor, create a Separete RGBA and Combine RGBA nodes, connect them and put anything between it (math, color balance). Display the result, mute those three nodes and it always crash on my computer. http://vincentgires.com/divers/blender_bug/compo_mute_bug_2.74.blend (this is the screenshot file)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @VincentGires

Added subscriber: @VincentGires
Author

I've just tested the same file on another computer which is on Windows 7 and it doesn't crash.

I've just tested the same file on another computer which is on Windows 7 and it doesn't crash.

This issue was referenced by c69b5e0276

This issue was referenced by c69b5e027642a3f82f869062e79ee532bec1b723

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c69b5e0276.

Closed by commit c69b5e0276.

This issue was referenced by bef0649151

This issue was referenced by bef0649151308eff86e79e7f72593d6f11802a69
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44040
No description provided.